feat: add `/users/inactive` route
